Sugati/src/objects/Itinerary_Content__c.object
<CustomObject>
    <description>Itinerary Content Library</description>
    <fields>
        <fullName>IC_Category__c</fullName>
        <formula>IC_Itinerary_Content_Category__r.Name</formula>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IC_ConfirmationLetter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmation Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IC_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>Itinerary_Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IC_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IC_FinalDoc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FinalDoc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IC_Itinerary_Content_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Itinerary Content Category</label>
        <referenceTo>Itinerary_Content_Category__c</referenceTo>
        <relationshipName>Itinerary_Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IC_Itinerary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Itinerary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IC_New_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IC_Order__c</fullName>
        <label>Order</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IC_Page__c</fullName>
        <label>Page</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IC_Small_Font__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Small Font</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IC_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Mostly for Original Diving.</description>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipName>Itinerary_Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IC_Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IC_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Itinerary_Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IC_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web</label>
        <type>Checkbox</type>
    </fields>
    <label>Content</label>
    <listViews>
        <fullName>All</fullName>
        <columns>IC_Itinerary_Content_Category__c</columns>
        <columns>IC_Description__c</columns>
        <columns>IC_FinalDoc__c</columns>
        <columns>IC_ConfirmationLetter__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Content_by_Title_Country</fullName>
        <columns>IC_Category__c</columns>
        <columns>IC_Country__c</columns>
        <columns>IC_Itinerary__c</columns>
        <columns>IC_Itinerary_Content_Category__c</columns>
        <columns>IC_Title__c</columns>
        <columns>NAME</columns>
        <columns>IC_Order__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>IC_Description__c</columns>
        <columns>IC_ConfirmationLetter__c</columns>
        <columns>IC_FinalDoc__c</columns>
        <filterScope>Everything</filterScope>
        <label>Content by Title &amp; Country</label>
    </listViews>
    <listViews>
        <fullName>Oman</fullName>
        <columns>NAME</columns>
        <columns>IC_Category__c</columns>
        <columns>IC_ConfirmationLetter__c</columns>
        <columns>IC_FinalDoc__c</columns>
        <columns>IC_Itinerary__c</columns>
        <columns>IC_Order__c</columns>
        <columns>IC_Title__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IC_Country__c</field>
            <operation>equals</operation>
            <value>Oman</value>
        </filters>
        <label>Oman</label>
    </listViews>
    <nameField>
        <displayFormat>IC-{0000000000}</displayFormat>
        <label>Itinerary Content ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contents</pluralLabel>
    <recordTypes>
        <fullName>MU</fullName>
        <active>true</active>
        <label>MU</label>
    </recordTypes>
    <recordTypes>
        <fullName>OD</fullName>
        <active>true</active>
        <label>OD</label>
    </recordTypes>
    <recordTypes>
        <fullName>OT</fullName>
        <active>true</active>
        <label>OT</label>
    </recordTypes>
    <recordTypes>
        <fullName>OTUK</fullName>
        <active>true</active>
        <label>OTUK</label>
    </recordTypes>
    <recordTypes>
        <fullName>ST</fullName>
        <active>true</active>
        <label>ST</label>
    </recordTypes>
    <recordTypes>
        <fullName>TB</fullName>
        <active>true</active>
        <label>TB</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>